@startuml


''''''''''''''''''''''''''''' 

interface IUserAggregator {
    AddAccount(account : Account) : void
    RemoveAccount(account : Account) : void
    Contains(account : Account) : bool
}
IUserAggregator <|-- Project

class Project
{
    Accounts : Account[]
    Boards : Board[]
    Tags: Tag[]
    Logs: LogStorage

    createBoard(name: string)a

}

'''''''''''''''''''''''''''''

class Account
{
}
Account "*" --o "*" Project

note "В этом файле класс определен частично" as partialDefinitionNote
partialDefinitionNote . Account

'''''''''''''''''''''''''''''

class Board
{
    name: string
    columns: Column[]

    createColumn(name: string);
    removeColumn(name: string);
    addTask(colName: string, task: Task);

    ''''''''''''''' ????
    getTask(colName: string, rowNum: int); 
    getTask(colNum: int, name: string);
    '''''''''''''''

    getColumns(): Column[]
}
Board "*" --o "*" Project

'''''''''''''''''''''''''''''

class Column
{
    name: string
    limitOfTask: int
    tasks: ITask[]

    getTasks(): Task[]
}

'''''''''''''''''''''''''''''

class Task
{
    Name: string
    Description: string
    Authors: User[]
    AssociatedTasks: Task[]
    CreationTime: DateTime
    Status: string
    Tags: Tag[]
    Components : IComponent[]
}

'''''''''''''''''''''''''''''

interface IComponent
{
    Name: string
}

class DateComponent
{
    date: Date
}

class DoubleComponent
{
    value: double
}

class StringComponent
{
    value: string
}

class SectionComponent
{
    Name: string
    Components : IComponent[]
}

'''''''''''''''''''''''''''''```

class Tag
{
    color: Color
    name: string
}

Board "1" *-- "*" Column : Содержит
Column "1" *-- "*" Task: Содержит
Task "1" *-- "*" IComponent
'IComponent <|-- ScrumComponent
IComponent <|-- DateComponent
IComponent <|-- DoubleComponent
IComponent <|-- StringComponent
IComponent <|-- SectionComponent
Task "1" o-- "*" Tag

@enduml